--- a/src/content/once-ui/components/accordion.mdx
+++ b/src/content/once-ui/components/accordion.mdx
@@ -3,7 +3,7 @@ title: "Accordion"
 summary: "The Accordion component provides a collapsible container to show and hide content, saving space and improving user experience."
 updatedAt: "2025-05-04"
 navLabel: "Accordion"
-navIcon: "learn"
+navIcon: "components"
 ---
 
 A collapsible container that allows users to expand and collapse sections of content, helping to organize information in a compact way. It's useful for FAQs, navigation menus, and any content that benefits from progressive disclosure.
