--- a/src/content/once-ui/components/accordionGroup.mdx
+++ b/src/content/once-ui/components/accordionGroup.mdx
@@ -3,7 +3,7 @@ title: "AccordionGroup"
 summary: "The AccordionGroup component provides a container for multiple Accordion components with consistent styling and spacing."
 updatedAt: "2025-05-04"
 navLabel: "AccordionGroup"
-navIcon: "learn"
+navIcon: "components"
 ---
 
 A container component that groups multiple Accordion components together with consistent styling and dividers between each item. It's useful for creating FAQ sections, navigation menus, and other grouped collapsible content.
