--- a/src/content/once-ui/components/arrow.mdx
+++ b/src/content/once-ui/components/arrow.mdx
@@ -3,7 +3,7 @@ title: "Arrow"
 summary: "The Arrow component provides an animated arrow that responds to hover events on specified trigger elements."
 updatedAt: "2025-05-04"
 navLabel: "Arrow"
-navIcon: "learn"
+navIcon: "components"
 ---
 
 A decorative arrow component that animates when a specified trigger element is hovered. It's useful for creating visual cues and enhancing interactive elements with subtle animations.
