--- a/src/content/once-ui/components/avatar.mdx
+++ b/src/content/once-ui/components/avatar.mdx
@@ -3,7 +3,7 @@ title: "Avatar"
 summary: "The Avatar component displays a user's profile picture, initials, or fallback icon in a circular container."
 updatedAt: "2025-05-05"
 navLabel: "Avatar"
-navIcon: "user"
+navIcon: "components"
 ---
 
 A versatile component for displaying user profile images, initials, or fallback icons in a circular container. Commonly used in user interfaces to represent people.
