--- a/src/content/once-ui/components/avatarGroup.mdx
+++ b/src/content/once-ui/components/avatarGroup.mdx
@@ -3,7 +3,7 @@ title: "AvatarGroup"
 summary: "The AvatarGroup component displays multiple avatars in a horizontal stack with customizable appearance and overflow handling."
 updatedAt: "2025-05-05"
 navLabel: "AvatarGroup"
-navIcon: "users"
+navIcon: "components"
 ---
 
 A component for displaying multiple user avatars in a compact, horizontal stack. Commonly used in collaborative interfaces to show team members, participants, or contributors.
