--- a/src/content/once-ui/components/badge.mdx
+++ b/src/content/once-ui/components/badge.mdx
@@ -3,7 +3,7 @@ title: "Badge"
 summary: "The Badge component displays highlighted information with optional icon and arrow in a pill-shaped container."
 updatedAt: "2025-05-05"
 navLabel: "Badge"
-navIcon: "tag"
+navIcon: "components"
 ---
 
 A versatile component for displaying highlighted information, labels, or interactive elements in a pill-shaped container. Commonly used to draw attention to important information or provide interactive links.
