--- a/src/content/once-ui/components/background.mdx
+++ b/src/content/once-ui/components/background.mdx
@@ -3,7 +3,7 @@ title: "Background"
 summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
 updatedAt: "2025-05-04"
 navLabel: "Background"
-navIcon: "learn"
+navIcon: "components"
 ---
 
 ## Title
