--- a/src/content/magic-docs/components.mdx
+++ b/src/content/magic-docs/components.mdx
@@ -326,8 +326,8 @@ Icons are used to visually represent actions, objects, or concepts. For instruct
       <Icon name="rocket" onBackground="danger-medium" size="m" />
       <Icon name="close" size="m" />
       <Icon name="check" onBackground="success-medium" size="m" />
-      <Icon name="infoCircle" onBackground="info-medium" size="m" />
-      <Icon name="warningTriangle" onBackground="warning-medium" size="m" />
+      <Icon name="info" onBackground="info-medium" size="m" />
+      <Icon name="warning" onBackground="warning-medium" size="m" />
       <Icon name="chevronDown" size="m" />
       <Icon name="search" size="m" />
     </Row>}
@@ -337,8 +337,8 @@ Icons are used to visually represent actions, objects, or concepts. For instruct
 `<Icon name="rocket" size="m" />
 <Icon name="close" size="m" />
 <Icon name="check" onBackground="success-medium" size="m" />
-<Icon name="infoCircle" onBackground="info-medium" size="m" />
-<Icon name="warningTriangle" onBackground="warning-medium" size="m" />
+<Icon name="info" onBackground="info-medium" size="m" />
+<Icon name="warning" onBackground="warning-medium" size="m" />
 <Icon name="chevronDown" size="m" />
 <Icon name="search" size="m" />`,
         language: "tsx",
