--- a/src/content/once-ui/components/accordionGroup.mdx
+++ b/src/content/once-ui/components/accordionGroup.mdx
@@ -36,15 +36,24 @@ A container component that groups multiple Accordion components together with co
     items={[
       {
         title: "First Item",
-        content: <Text onBackground="neutral-weak">Content for the first item</Text>
+        content:
+          <Text onBackground="neutral-weak">
+            Content for the first item
+          </Text>
       },
       {
         title: "Second Item",
-        content: <Text onBackground="neutral-weak">Content for the second item</Text>
+        content:
+          <Text onBackground="neutral-weak">
+            Content for the second item
+          </Text>
       },
       {
         title: "Third Item",
-        content: <Text onBackground="neutral-weak">Content for the third item</Text>
+        content:
+          <Text onBackground="neutral-weak">
+            Content for the third item
+          </Text>
       }
     ]}
 />`,
