--- a/src/content/once-ui/basics/border.mdx
+++ b/src/content/once-ui/basics/border.mdx
@@ -6,6 +6,241 @@ navLabel: "Border"
 navIcon: "learn"
 ---
 
-## Title
 
-Content
+
+
+Shape language in design profoundly influences the style of an interface. For instance, a website employing a large border radius often appears more playful, whereas one with small borders and sharp corners tends to convey a more conservative feel.
+
+## Shape style
+
+Override the default shape style with the `data-border` attribute on a native HTML element.
+
+<CodeBlock
+  label="Shape style"
+  marginTop="8"
+  marginBottom="16"
+  codeInstances={[
+    {
+      code: `<Flex data-border="conservative | playful | rounded" radius="m"/>`,
+      language: "tsx",
+      label: "Shape style"
+    }
+  ]}
+  codePreview={
+    <Flex fillWidth mobileDirection="column" gap="m">
+      <Flex
+        data-border="conservative"
+        fillWidth
+        height={4}
+        shadow="m"
+        background="neutral-strong"
+        border="neutral-strong"
+        radius="m"
+      />
+      <Flex
+        data-border="playful"
+        fillWidth
+        height={4}
+        shadow="m"
+        background="neutral-strong"
+        border="neutral-strong"
+        radius="m"
+      />
+      <Flex
+        data-border="rounded"
+        fillWidth
+        height={4}
+        shadow="m"
+        background="neutral-strong"
+        border="neutral-strong"
+        radius="m"
+      />
+    </Flex>
+  }
+/>
+
+## Border radius
+
+In Once UI, we adopt the T-shirt size model for managing border radius, with values ranging from `xs` to `xl`.
+
+<CodeBlock
+  label="Border radius"
+  marginTop="8"
+  marginBottom="16"
+  codeInstances={[
+    {
+      code: `<Flex radius="xs | s | m | l | xl"/>`,
+      language: "tsx",
+      label: "Border radius"
+    }
+  ]}
+  codePreview={
+    <Flex fillWidth mobileDirection="column" gap="m">
+      <Flex
+        fillWidth
+        height={4}
+        background="neutral-strong"
+        shadow="m"
+        border="neutral-strong"
+        radius="xs"
+      />
+      <Flex
+        fillWidth
+        height={4}
+        background="neutral-strong"
+        shadow="m"
+        border="neutral-strong"
+        radius="s"
+      />
+      <Flex
+        fillWidth
+        height={4}
+        background="neutral-strong"
+        shadow="m"
+        border="neutral-strong"
+        radius="m"
+      />
+      <Flex
+        fillWidth
+        height={4}
+        background="neutral-strong"
+        shadow="m"
+        border="neutral-strong"
+        radius="l"
+      />
+      <Flex
+        fillWidth
+        height={4}
+        background="neutral-strong"
+        shadow="m"
+        border="neutral-strong"
+        radius="xl"
+      />
+    </Flex>
+  }
+/>
+
+## Nested radius
+
+A common challenge in border-radius systems is nesting. For nested elements to maintain an aesthetic and natural appearance, they require varying border radius sizes. Once UI addresses this issue by providing additional border radius values specifically for containers with `static-size-4` and `static-size-8` paddings, which are the most frequently used nesting sizes.
+
+<CodeBlock
+  label="Nested radius"
+  marginTop="8"
+  marginBottom="16"
+  codeInstances={[
+    {
+      code: `const radius = { xs | s | m | l | xl }
+
+<Flex radius="{radius}-8">
+  <Flex radius="{radius}-4">
+    <Flex radius="{radius}"/>
+  </Flex>
+</Flex>`,
+      language: "tsx",
+      label: "Nested radius"
+    }
+  ]}
+  codePreview={
+    <Flex fillWidth mobileDirection="column" gap="m">
+      <Flex fillWidth padding="8" shadow="m" border="neutral-strong" radius="xs-8">
+        <Flex fillWidth padding="4" border="neutral-strong" radius="xs-4">
+          <Flex
+            fillWidth
+            height={4}
+            background="neutral-strong"
+            border="neutral-strong"
+            radius="xs"
+          />
+        </Flex>
+      </Flex>
+      <Flex fillWidth padding="8" shadow="m" border="neutral-strong" radius="s-8">
+        <Flex fillWidth padding="4" border="neutral-strong" radius="s-4">
+          <Flex
+            fillWidth
+            height={4}
+            background="neutral-strong"
+            border="neutral-strong"
+            radius="s"
+          />
+        </Flex>
+      </Flex>
+      <Flex fillWidth padding="8" shadow="m" border="neutral-strong" radius="m-8">
+        <Flex fillWidth padding="4" border="neutral-strong" radius="m-4">
+          <Flex
+            fillWidth
+            height={4}
+            background="neutral-strong"
+            border="neutral-strong"
+            radius="m"
+          />
+        </Flex>
+      </Flex>
+      <Flex fillWidth padding="8" shadow="m" border="neutral-strong" radius="l-8">
+        <Flex fillWidth padding="4" border="neutral-strong" radius="l-4">
+          <Flex
+            fillWidth
+            height={4}
+            background="neutral-strong"
+            border="neutral-strong"
+            radius="l"
+          />
+        </Flex>
+      </Flex>
+      <Flex fillWidth padding="8" shadow="m" border="neutral-strong" radius="xl-8">
+        <Flex fillWidth padding="4" border="neutral-strong" radius="xl-4">
+          <Flex
+            fillWidth
+            height={4}
+            background="neutral-strong"
+            border="neutral-strong"
+            radius="xl"
+          />
+        </Flex>
+      </Flex>
+    </Flex>
+  }
+/>
+
+## Border style
+
+Sets the `border-style` and `border-width` properties.
+
+<Table
+  marginTop="8"
+  marginBottom="16"
+  data={{
+    headers: [
+      { content: "Class", key: "class", sortable: true },
+      { content: "Preview", key: "preview", sortable: false },
+    ],
+    rows: [
+      [".solid-1", <Flex width="64" height="20" border="neutral-strong" radius="xs"></Flex>],
+      [".solid-2", <Flex width="64" height="20" border="neutral-strong" borderStyle="solid-2" radius="xs"></Flex>]
+    ]
+  }}
+/>
+
+## Border color
+
+Sets the `border-color` property.
+
+<Table
+  marginTop="8"
+  marginBottom="16"
+  data={{
+    headers: [
+      { content: "Class", key: "class", sortable: false },
+      { content: "Value", key: "value", sortable: false },
+      { content: <Row gap="8"><Icon name="dark" size="xs"/><Icon name="light" size="xs"/></Row>, key: "preview", sortable: false },
+    ],
+    rows: [
+      [".neutral-border-weak", <InlineCode>var(--neutral-border-weak)</InlineCode>, <Row gap="8"><Flex border="neutral-weak" radius="xs" width="20" height="20"/></Row>],
+      [".neutral-border-medium", <InlineCode>var(--neutral-border-medium)</InlineCode>, <Row gap="8"><Flex border="neutral-medium" radius="xs" width="20" height="20"/></Row>],
+      [".neutral-border-strong", <InlineCode>var(--neutral-border-strong)</InlineCode>, <Row gap="8"><Flex border="neutral-strong" radius="xs" width="20" height="20"/></Row>],
+      [".neutral-border-alpha-weak", <InlineCode>var(--neutral-border-alpha-weak)</InlineCode>, <Row gap="8"><Flex border="neutral-alpha-weak" radius="xs" width="20" height="20"/></Row>],
+      [".neutral-border-alpha-medium", <InlineCode>var(--neutral-border-alpha-medium)</InlineCode>, <Row gap="8"><Flex border="neutral-alpha-medium" radius="xs" width="20" height="20"/></Row>],
+      [".neutral-border-alpha-strong", <InlineCode>var(--neutral-border-alpha-strong)</InlineCode>, <Row gap="8"><Flex border="neutral-alpha-strong" radius="xs" width="20" height="20"/></Row>],
+    ]
+  }}
+/>
