--- a/src/content/once-ui/basics/structure.mdx
+++ b/src/content/once-ui/basics/structure.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Stucture"
+title: "Structure"
 summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
 updatedAt: "2025-05-04"
 navLabel: "Structure"
@@ -10,23 +10,86 @@ navIcon: "learn"
 
 Once UI layouts are built using `Flex` and `Grid`, prop-based abstractions over CSS flexbox and grid. These primitives are the foundation of the system, enabling layout logic through composition rather than CSS.
 
-### Syntax Basics
+<Flex
+  marginTop="16"
+  marginBottom="24"
+  fillWidth
+  gap="12"
+  radius="l"
+  padding="l"
+  border="neutral-medium"
+  background="surface"
+>
+  {Array(6)
+    .fill(null)
+    .map((_, index) => (
+      <Background 
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        key={index}
+        shadow="m"
+        fillWidth
+        radius="m"
+        height={8}
+        border="neutral-alpha-medium"
+      />
+    ))}
+</Flex>
+
+### Syntax
 
 We expose two convenience wrappers: `Row` and `Column`. These are semantically expressive `Flex` elements with pre-set directions. Use them instead of the `Flex` for better semantics and code quality.
 
 <CodeBlock
   marginTop="8"
   marginBottom="16"
+  codePreview={
+    <Row fillWidth gap="16" mobileDirection="column" textVariant="label-default-s" onBackground="neutral-weak">
+      <Background 
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fillWidth center border="neutral-alpha-medium" radius="m" padding="16">
+          col
+      </Background>
+      <Column fill gap="16">
+        <Background 
+          lines={{display: true, color: "neutral-alpha-weak"}}
+          fill center border="neutral-alpha-medium" radius="m" padding="16">
+            row
+        </Background>
+        <Background 
+          lines={{display: true, color: "neutral-alpha-weak"}}
+          fill center border="neutral-alpha-medium" radius="m" padding="16">
+            row
+        </Background>
+      </Column>
+      <Background 
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fillWidth center border="neutral-alpha-medium" radius="m" padding="16">
+          col
+      </Background>
+    </Row>
+  }
   codeInstances={[
     {
-      code: `
-<Row gap="8" padding="12" background="surface">
-  <Avatar fallback="A" />
-  <Text variant="body-default-m">Username</Text>
+      code:
+`<Row fillWidth gap="16" mobileDirection="column">
+    <Column fillWidth center>
+        col
+    </Column>
+    <Column fill gap="16">
+      <Row fill center>
+          row
+      </Row>
+      <Row fill center>
+          row
+      </Row>
+    </Column>
+    <Column fillWidth center>
+        col
+    </Column>
 </Row>
 `,
       language: "tsx",
-      label: "Row layout"
+      label: "Flex layout"
     }
   ]}
 />
@@ -37,28 +100,167 @@ We expose two convenience wrappers: `Row` and `Column`. These are semantically e
 Rather than wrestling with `justifyContent` and `alignItems`, we use semantic `horizontal` and `vertical` props that auto-adjust based on direction.
 
 <CodeBlock
+  marginTop="8"
+  marginBottom="16"
+  codePreview={
+    <Column fillWidth gap="16">
+      <Background
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fillWidth minHeight={10} padding="16" radius="m" border="neutral-alpha-medium">
+        <Button size="s" data-border="rounded">Continue</Button>
+      </Background>
+      <Background
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fillWidth center minHeight={10} padding="16" radius="m" border="neutral-alpha-medium">
+        <Button size="s" data-border="rounded">Continue</Button>
+      </Background>
+      <Background
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fillWidth horizontal="end" vertical="end" minHeight={10} padding="16" radius="m" border="neutral-alpha-medium">
+        <Button size="s" data-border="rounded">Continue</Button>
+      </Background>
+    </Column>
+  }
   codeInstances={[
     {
-      code: `
-<Column horizontal="center" vertical="end" fillHeight>
-  <Button variant="solid" color="brand">Continue</Button>
+      code:
+`<Column fillWidth minHeight={10}>
+    <Button>Continue</Button>
+</Column>
+<Column fillWidth center minHeight={10}>
+    <Button>Continue</Button>
+</Column>
+<Column fillWidth horizontal="end" vertical="end" minHeight={10}>
+    <Button>Continue</Button>
 </Column>
 `,
       language: "tsx",
-      label: "Semantic alignment"
+      label: "Alignment"
     }
   ]}
 />
 
-The `center` prop is shorthand for both `horizontal="center"` and `vertical="center"`.
+The `start` is the default value for both alignments, so we don't declare them. The `center` prop is shorthand for both `horizontal="center"` and `vertical="center"`.
 
+We can also use `space-around` and `space-between` values for the alignment props:
+
+<CodeBlock
+  marginTop="8"
+  marginBottom="16"
+  codePreview={
+    <Column fillWidth gap="16">
+      <Background
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fillWidth horizontal="space-between" padding="16" radius="m" border="neutral-alpha-medium">
+        <IconButton icon="chevronLeft" variant="secondary" data-border="rounded"/>
+        <Button size="s" data-border="rounded">Continue</Button>
+      </Background>
+      <Background
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        direction="column" minHeight={16} fillWidth horizontal="center" vertical="space-around" padding="16" radius="m" border="neutral-alpha-medium">
+        <IconButton icon="chevronLeft" variant="secondary" data-border="rounded"/>
+        <Button size="s" data-border="rounded">Continue</Button>
+      </Background>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Column fillWidth horizontal="space-between">
+    <IconButton icon="chevronLeft"/>
+    <Button>Continue</Button>
+</Column>
+<Column fillWidth horizontal="center" vertical="space-around">
+    <IconButton icon="chevronLeft"/>
+    <Button>Continue</Button>
+</Column>
+`,
+      language: "tsx",
+      label: "Space between"
+    }
+  ]}
+/>
+
+### Size
+
+Use the `fillWidth`, `fillHeight`, or shorthand `fill` to fill up the remaining space. These properties also apply `minWidth` and `minHeight` of `0` if not specified.
+
+Use `fit`, `fitWidth`, `fitHeight` to apply `fit-content`.
+
+<CodeBlock
+  marginTop="8"
+  marginBottom="16"
+  codePreview={
+    <Column fillWidth horizontal="center" gap="16">
+      <Background
+        border="neutral-alpha-medium" radius="m" padding="16"
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fit>
+        <Button size="s" data-border="rounded">Continue</Button>
+      </Background>
+      <Background
+        horizontal="center" border="neutral-alpha-medium" radius="m" padding="16"
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        fillWidth fitHeight>
+        <Button size="s" data-border="rounded">Continue</Button>
+      </Background>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Column fit background="overlay">
+    <Button>Continue</Button>
+</Column>
+<Column fillWidth fitHeight horizontal="center" background="overlay">
+    <Button>Continue</Button>
+</Column>
+`,
+      language: "tsx",
+      label: "Fill"
+    }
+  ]}
+/>
+
+You can also use `maxWidth`, `minHeight`, and `aspectRatio`. `maxWidth` will also apply `fillWidth`.
+
+<CodeBlock
+  marginTop="8"
+  marginBottom="16"
+  codePreview={
+    <Column fitHeight fillWidth horizontal="center" gap="16" align="center" onBackground="neutral-weak" textVariant="label-default-s">
+      <Background maxWidth={20}
+        center border="neutral-alpha-medium" radius="m" padding="16"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        maxWidth: 20
+      </Background>
+      <Background
+        center border="neutral-alpha-medium" radius="m" padding="16"
+        lines={{display: true, color: "neutral-alpha-weak"}}
+        aspectRatio="16/9">
+        aspectRatio: 16 / 9
+      </Background>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Column maxWidth={20}>
+    maxWidth={20}
+</Column>
+<Column fillWidth aspecRatio="16/9>
+    aspectRatio="16 / 9"
+</Column>
+`,
+      language: "tsx",
+      label: "Fill"
+    }
+  ]}
+/>
 
 ### Background
 
-Use `background` and `solid` props to apply colors.
-
-- `background="brand-alpha-medium"` — soft, layered backgrounds
-- `solid="neutral-medium"` — solid fills for buttons, toggles, inputs
+Use the `background` and `solid` props to apply colors.
 
 <CodeBlock
   marginTop="8"
@@ -123,6 +325,8 @@ Use `background` and `solid` props to apply colors.
     }
   ]}
 />
+
+The `solid` prop is commonly used for interactive element backgrounds, such as the button and checkbox.
 
 <CodeBlock
   marginTop="8"
@@ -207,6 +411,8 @@ Use `background` and `solid` props to apply colors.
     }
   ]}
 />
+
+The `alpha` properties let you design subtle backgrounds and overlays.
 
 <CodeBlock
   marginTop="8"
@@ -296,7 +502,7 @@ Use `background` and `solid` props to apply colors.
 
 The `surface` background and border property allows you to style elements differently in light- and dark mode. By default, the surface background is `neutral-medium` in dark mode and `neutral-weak` in light mode, and the border color is `transparent` in dark mode and `neutral-medium` in light mode.
 
-The surface properties are designed for large layout container elements such as the Header or Sidebar.
+The surface properties are designed for large layout container elements such as headers or sidebars.
 
 <CodeBlock
   marginTop="8"
@@ -402,17 +608,16 @@ The surface properties are designed for large layout container elements such as 
 
 ### Spacing
 
-Use utility props to apply spacing consistently:
-
-- `padding`, `paddingX`, `marginTop`, etc.
-- Values can be spacing tokens (`"6"`, `"12"`) or numbers (converted to `rem`)
-- `gap` sets the internal spacing between children
+Use utility props to apply spacing consistently, such as the `padding`, `paddingX`, `marginTop`, etc. Values can be [spacing tokens](/once-ui/basics/spacing) or numbers (converted to `rem`). Use the `gap` to set the internal spacing between children.
 
 <CodeBlock
+  codePreview={
+    <></>
+  }
   codeInstances={[
     {
-      code: `
-<Column padding="8" gap="4">
+      code:
+`<Column padding="8" gap="4">
   <Text>Line 1</Text>
   <Text>Line 2</Text>
 </Column>
@@ -422,30 +627,6 @@ Use utility props to apply spacing consistently:
     }
   ]}
 />
-
-
-### Size
-
-Use the `fillWidth`, `fillHeight`, or shorthand `fill` to apply `100%` dimensions.
-
-<CodeBlock
-  codeInstances={[
-    {
-      code: `
-<Flex fill background="overlay">
-  <Text variant="heading-strong-l">Fullscreen Section</Text>
-</Flex>
-`,
-      language: "tsx",
-      label: "Fill size"
-    }
-  ]}
-/>
-
-Use `fit`, `fitWidth`, `fitHeight` to apply `fit-content`.
-
-You can also use `maxWidth`, `minHeight`, and `aspectRatio`.
-
 
 ### Border
 
